k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000         # internal port for Kubernetes
      targetPort: 8000   # container port
      nodePort: 30001    # port on Minikube host
