k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80          # internal port for Kubernetes
      targetPort: 80    # container port (Nginx)
      nodePort: 30000   # port on Minikube host
